[package]
name = "scannedpdf"
version = "0.1.0"
edition = "2021"
authors = ["lihe07"]
description = "A fast, low memory footprint, simple images to PDF crate"
documentation = "https://docs.rs/scannedpdf"
repository = "https://github.com/lihe07/scannedpdf"
license = "MIT"

[dependencies]
flate2 = { version = "1.0", optional = true }
image = "0.24"

[dev-dependencies]
criterion = "0.4"
printpdf = { version = "0.5", features = ["embedded_images"]}

[[bench]]
name = "basic"
harness = false

[features]
default = ["flate2"]
flate2 = ["dep:flate2"]

# Always optimize image crate
[profile.dev.package.image]
opt-level = 3

[profile.test.package.image]
opt-level = 3
